Set max-width and fix letter-spacing in select

--- a/assets/stylesheets/_modules/_page.scss
+++ b/assets/stylesheets/_modules/_page.scss
@@ -4,7 +4,7 @@
   padding-bottom: rhythm(2);
 
   .grid {
-    max-width: 100%;
+    max-width: 1165px;
   }
 
   &__sidebar {
